added listing of all edges
